# monitoring-plugins

./: .clang-format  .cvsignore  .gitignore  .travis.yml  ACKNOWLEDGEMENTS  AUTHORS  BRANCHES  BUGS  CHANGES  CODING  ChangeLog  FAQ  Helper.pm  INSTALL  INSTALLING  MP-VERSION-GEN  MPTest.pm  Makefile.am  NEWS  NP-VERSION-GEN  NPTest.pm  README  REQUIREMENTS  ROADMAP  Requirements  SUPPORT  THANKS.in  acconfig.h  acinclude.m4  aclocal.m4  autogen.sh  check_mysql.c  command.cfg.in  configure.ac  configure.in  make-tarball  monitoring-plugins.spec.in  nagios-plugins.spec  nagios-plugins.spec.in  nagiosplug_mariadbclient.patch  (+6 more)
lib/: .cvsignore  Makefile.am  Makefile.config-opts  afs.m4  base64.c  base64.h  error.c  extra_opts.c  extra_opts.h  fsusage.c  fsusage.m4  getaddrinfo.c  getaddrinfo.h  gethostbyname.h  ls-mntd-fs.m4  maxfd.c  maxfd.h  monitoringplug.h  mountlist.c  output.c  output.h  parse_ini.c  parse_ini.h  perfdata.c  perfdata.h  snprintf.c  states.h  thresholds.c  thresholds.h  utils_base.c  utils_base.h  utils_cmd.c  utils_cmd.h  utils_disk.c  utils_disk.h  utils_tcp.c  utils_tcp.h
lib/tests/: .cvsignore  Makefile.am  Makefile.config-opts  README  config-dos.ini  config-opts.ini  config-tiny.ini  plugin.ini  plugins.ini  test_all.t  test_base64.c  test_base64.t  test_cmd.c  test_cmd.t  test_disk.c  test_disk.t  test_generic_output  test_generic_output.c  test_generic_output.t  test_ini.c  test_ini.t  test_ini1.c  test_ini1.t  test_ini3.c  test_ini3.t  test_opts.c  test_opts.t  test_opts1  test_opts1.c  test_opts1.t  test_opts2  test_opts2.c  test_opts2.t  test_opts3.c  test_opts3.t  test_tcp.c  test_tcp.t  test_utils.c  test_utils.t
lib/tests/var/: .gitignore  baddate  missingdataline  oldformat  statefile
m4/: .cvsignore  Makefile.am  Makefile.am.in  np_coreutils.m4  np_curl.m4  np_mysqlclient.m4  uriparser.m4
perlmods/: Makefile.am  install_order
plugins/: .cvsignore  Makefile.am  check_apt.c  check_by_ssh.c  check_cluster.c  check_curl.c  check_dbi.c  check_dhcp.c  check_dig.c  check_disk.c  check_dns.c  check_dummy.c  check_fping.c  check_ftp.c  check_game.c  check_hpjd.c  check_http.c  check_icmp.c  check_ide-smart.c  check_ide_smart.c  check_imap.c  check_ldap.c  check_load.c  check_mrtg.c  check_mrtgtraf.c  check_mysql.c  check_mysql_query.c  check_mysql_slave.c  check_nagios.c  check_nntp.c  check_nt.c  check_ntp.c  check_ntp_peer.c  check_ntp_time.c  check_ntpd.c  check_nwstat.c  check_overcr.c  check_pgsql.c  check_ping.c  check_pop.c  (+47 more)
plugins-root/: .cvsignore  Makefile.am  NP-VERSION-FILE  check_dhcp.c  check_icmp.c  pst3.c
plugins-root/check_dhcp.d/: config.h
plugins-root/check_icmp.d/: check_icmp_helpers.c  check_icmp_helpers.h  config.h
plugins-root/t/: check_dhcp.t  check_icmp.t
plugins-scripts/: .cvsignore  Makefile.am  check_asterisk_peer.py  check_breeze.pl  check_disk_smb.pl  check_file_age.pl  check_flexlm.pl  check_geom.pl  check_ifoperstatus.pl  check_ifstatus.pl  check_ircd.pl  check_log.sh  check_mailq.pl  check_mssql.pl  check_netdns.pl  check_nfs.pl  check_ntp.pl  check_oracle.sh  check_rpc.pl  check_sensors.sh  check_uptime  check_uptime.pl  check_wave.pl  subst.in  utils.pm.in  utils.sh.in
plugins-scripts/t/: check_disk_smb.t  check_file_age.t  check_ifoperstatus.t  check_ifstatus.t  check_log.t  check_rpc.t  check_uptime.t  utils.t
plugins/check_apt.d/: config.h
plugins/check_by_ssh.d/: config.h
plugins/check_cluster.d/: config.h
plugins/check_curl.d/: check_curl_helpers.c  check_curl_helpers.h  config.h
plugins/check_dbi.d/: config.h
plugins/check_dig.d/: config.h
plugins/check_disk.d/: config.h  utils_disk.c  utils_disk.h
plugins/check_dns.d/: config.h
plugins/check_fping.d/: config.h
plugins/check_game.d/: config.h
plugins/check_hpjd.d/: config.h
plugins/check_ide_smart.d/: config.h
plugins/check_ldap.d/: config.h
plugins/check_load.d/: config.h
plugins/check_mrtg.d/: config.h
plugins/check_mrtgraf.d/: config.h
plugins/check_mrtgtraf.d/: config.h
plugins/check_mysql.d/: config.h
plugins/check_mysql_query.d/: config.h
plugins/check_nagios.d/: config.h
plugins/check_nt.d/: config.h
plugins/check_ntp_peer.d/: config.h
plugins/check_ntp_time.d/: config.h
plugins/check_pgsql.d/: config.h
plugins/check_ping.d/: config.h
plugins/check_procs.d/: config.h
plugins/check_radius.d/: config.h
plugins/check_real.d/: config.h
plugins/check_smtp.d/: config.h
plugins/check_snmp.d/: check_snmp_helpers.c  check_snmp_helpers.h  config.h
plugins/check_ssh.d/: config.h
plugins/check_swap.d/: check_swap.h  swap.c
plugins/check_tcp.d/: config.h
plugins/check_time.d/: config.h
plugins/check_ups.d/: config.h
plugins/check_users.d/: config.h  users.c  users.h
plugins/negate.d/: config.h
plugins/picohttpparser/: Makefile.am  picohttpparser.c  picohttpparser.h
plugins/t/: NPTest.cache.travis  check_apt.t  check_by_ssh.t  check_cluster.t  check_curl.t  check_dbi.t  check_dig.t  check_disk.t  check_dns.t  check_dummy.t  check_fping.t  check_ftp.t  check_hpjd.t  check_http.t  check_imap.t  check_jabber.t  check_ldap.t  check_load.t  check_mysql.t  check_mysql_query.t  check_nagios.t  check_ntp.t  check_ntp_peer.t  check_ntp_time.t  check_ntpd.t  check_ping.t  check_pop.t  check_procs.t  check_smtp.t  check_snmp.t  check_ssh.t  check_swap.t  check_tcp.t  check_time.t  check_udp.t  check_users.t  check_vsz.t  negate.pl  negate.t
plugins/t/check_apt_input/: debian1  debian2  debian3  ubuntu1  ubuntu2
plugins/tests/: .cvsignore  Makefile.am  check_curl.t  check_disk  check_disk.t  check_dns  check_ftp  check_hpjd  check_http  check_http.t  check_load  check_nt.t  check_ping  check_procs  check_procs.t  check_snmp.t  check_snmp_agent.pl  check_swap  check_swap.t  check_users  check_vsz  test_check_disk.c  test_check_snmp  test_check_snmp.c  test_check_snmp.t  test_check_swap.c  test_check_swap.t  test_disk.c  test_utils.c  test_utils.t
plugins/tests/certs/: .gitignore  client-cert.pem  client-key.pem  clientca-cert.pem  clientca-key.pem  (+10 more)
plugins/uriparser/: Makefile.am
(+680 files in other folders)
